--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,16 @@
           <li>
             <%= link_to "CONTACT", new_contacts_path %>
           </li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <%= link_to "新規登録", new_post_path %>
+          </li>
+          <li>通知</li>
+          <li>
+            <%= link_to "マイページ", user_path(current_user) %>
+          </li>
         </ul>
         <!--ログインしていなくて、トップページ、新規登録ページ、ログインページの場合の処理-->
-      <% elsif current_page?(root_path) || current_page?(new_user_session_path) || current_page?(new_user_registration) %>
+      <% elsif current_page?(root_path) || current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
         <ul class="nav">
           <li>
             <%=link_to "ABOUT", about_path %>
