--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,10 +14,11 @@
           </tr>
             <tr class="slick">
               <td class="slick">
-                <% post.post_images.each do |image| %>
-                  <%= attachment_image_tag image, :image, size: '150x150' %>
-                <% end %>
-              </td>
+                  <% post.post_images.each do |image| %>
+                  <%= link_to post_path(image.post.id) do %>
+                    <%= attachment_image_tag image, :image, size: '150x150' %>
+                  <% end %>
+                  <% end %>
               </td>
             </tr>
           <tr>
