--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,34 +1,22 @@
 <div class="container">
   <div class="row">
     <%= form_with model: @post, local: true do |f| %>
-      <table>
-        <tr>
-          <th>
-            <h2>新規登録</h2>
-          </th>
-        </tr>
-        <tr>
-          <td>
-            <%= f.attachment_field :post_images_images, multiple: true %>
-            <!--multiple: trueが画像複数投稿する際に必要になる。-->
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <%= f.text_field :title, placeholder: "キャンプ場or施設名" %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <%= f.text_area :body, placeholder: "道具の紹介や施設の紹介など" %>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <%= f.submit "シェア" %>
-          </td>
-        </tr>
-      </table>
+      <div>
+        <h2>新規登録</h2>
+      </div>
+      <div>
+        <%= f.attachment_field :post_images_images, multiple: true %>
+        <!--multiple: trueが画像複数投稿する際に必要になる。-->
+      </div>
+      <div>
+        <%= f.text_field :title, placeholder: "キャンプ場or施設名" %>
+      </div>
+      <div>
+        <%= f.text_area :body, placeholder: "道具の紹介や施設の紹介など" %>
+      </div>
+      <div>
+        <%= f.submit "シェア" %>
+      </div>
     <% end %>
   </div>
 </div>
