--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,28 +5,25 @@
       <%= @post.name %>
     </div>
     <div class="col-lg-9">
-      <table>
-        <% @posts.each do |post| %>
-          <tr>
-            <td><%= post.user.name %></td>
-          </tr>
-          <tr>
-            <td><%= post.title %></td>
-          </tr>
-            <tr class="slick">
-              <td class="slick">
-                  <% post.post_images.each do |image| %>
-                  <%= link_to post_path(image.post.id) do %>
-                    <%= attachment_image_tag image, :image, size: '150x150' %>
-                  <% end %>
-                  <% end %>
-              </td>
-            </tr>
-          <tr>
-            <td><%= post.body %></td>
-          </tr>
-        <% end %>
-      </table>
+      <% @posts.each do |post| %>
+        <div>
+          <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+          <%= post.user.name %>
+        </div>
+        <div>
+          <%= post.title %>
+        </div>
+        <div class="slick" style="width: 500px;">
+          <% post.post_images.each do |image| %>
+            <%= link_to post_path(image.post.id) do %>
+              <%= attachment_image_tag image, :image, style: "width: 100%" %>
+            <% end %>
+          <% end %>
+        </div>
+        <div>
+          <%= post.body %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
