--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,9 +34,13 @@
       </table>
     </div>
     <div class="col-lg-9">
-      <%#= @posts.post_images.each do |image| %>
-        <%#= attachment_image_tag image, :image, size: '150x150' %>
-      <%# end %>
+      <% @posts.each do |post| %>
+        <% post.post_images.first(1).each do |image| %>
+          <%= link_to post_path(post.id) do %>
+            <%= attachment_image_tag image, :image, size: '200x200' %>
+          <% end %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 </div>
