--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,6 +22,7 @@
         </div>
         <div>
           <%= post.body %>
+          <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
         </div>
       <% end %>
     </div>
