--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -38,6 +38,26 @@
           <%= attachment_image_tag image, :image, style: "width: 100%" %>
         <% end %>
       </div>
+      <!--投稿画像に付けられたグッドにログインユーザーが含まれているか確認。-->
+      <% if @post.liked_by?(current_user) %>
+        <div>
+          <%= link_to post_likes_path(@post.id), method: :delete do %>
+            <i class="fas fa-thumbs-up"></i>
+          <% end %>
+        </div>
+        <div>
+          グッド!! <%= @post.likes.count %>件
+        </div>
+      <% else %>
+        <div>
+          <%= link_to post_likes_path(@post.id), method: :post do %>
+            <i class="far fa-thumbs-up"></i>
+          <% end %>
+        </div>
+        <div>
+          グッド!! <%= @post.likes.count %>件
+        </div>
+      <% end %>
       <div>
         <%= @post.body %>
       </div>
