--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-3">
       <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-      <%= @post.name %>
+      <%= @user.name %>
     </div>
     <div class="col-lg-9">
       <% @posts.each do |post| %>
@@ -20,8 +20,30 @@
             <% end %>
           <% end %>
         </div>
+        <!--投稿画像に付けられたグッドにログインユーザーが含まれているか確認。-->
+        <% if post.liked_by?(current_user) %>
+          <div>
+            <%= link_to post_likes_path(post.id), method: :delete do %>
+              <i class="fas fa-thumbs-up"></i>
+            <% end %>
+          </div>
+          <div>
+            グッド!! <%= post.likes.count %>件
+          </div>
+        <% else %>
+          <div>
+            <%= link_to post_likes_path(post.id), method: :post do %>
+              <i class="far fa-thumbs-up"></i>
+            <% end %>
+          </div>
+          <div>
+            グッド!! <%= post.likes.count %>件
+          </div>
+        <% end %>
         <div>
           <%= post.body %>
+        </div>
+        <div>
           <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
         </div>
       <% end %>
