--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,17 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+      <%= link_to user_path(@user.id) do %>
+        <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+      <% end %>
       <%= @user.name %>
     </div>
     <div class="col-lg-9">
       <% @posts.each do |post| %>
         <div>
-          <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+          <%= link_to user_path(post.user.id) do %>
+            <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+          <% end %>
           <%= post.user.name %>
         </div>
         <div>
