--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,15 +2,15 @@
   <div class="row">
     <div class="col-lg-3">
       <div>
-        <%= link_to user_path(@post.user.id) do %>
-          <%= attachment_image_tag @post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+        <%= link_to user_path(@user.id) do %>
+          <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
         <% end %>
-        <%= @post.user.name %>
+        <%= @user.name %>
       </div>
       <div>
-        <%= @post.user.introduction %>
+        <%= @user.introduction %>
       </div>
-      <% if @post.user == current_user %>
+      <% if @user == current_user %>
         <div>
           <%= link_to "投稿内容の編集", edit_post_path(@post.id) %>
         </div>
@@ -18,23 +18,12 @@
           <%= link_to "投稿を削除", post_path(@post), method: :delete %>
         </div>
       <% else %>
-        <div>
-          <%= link_to "フォロー中", follows_user_path(@user.id) %>
-          <%= @following_users.count %>
+        <div class="relationship_count">
+          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
         </div>
-        <div>
-          <%= link_to "フォロワー", followers_user_path(@user.id) %>
-          <%= @follower_users.count %>
+        <div class="relationship">
+          <%= render "relationships/button", user: @user %>
         </div>
-        <% if current_user.following?(@user) %>
-          <div>
-            <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
-          </div>
-        <% else %>
-          <div>
-            <%= link_to "フォローする", user_relationships_path(@user.id), method: :POST %>
-          </div>
-        <% end %>
         <div>
           DMボタン
         </div>
