--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,33 +5,25 @@
         <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
         <%= @user.name %>
       </div>
-      <div>
-        <%= link_to "フォロー中", follows_user_path(@user.id) %>
-        <%= @following_users.count %>
-      </div>
-      <div>
-        <%= link_to "フォロワー", followers_user_path(@user.id) %>
-        <%= @follower_users.count %>
-      </div>
-      <% if @user == current_user %>
-       <div>
-         <%= link_to "edit", edit_user_path(current_user.id) %>
-       </div>
-       <div>
-         <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-       </div>
-      <% else %>
-        <% if current_user.following?(@user) %>
-          <div>
-            <%= link_to "フォロー外す", user_relationships_path(@user.id), method: :delete %>
-          </div>
-        <% else %>
-          <div>
-            <%= link_to "フォローする", user_relationships_path(@user.id), method: :POST %>
-          </div>
-        <% end %>
+      <% if current_user != @user %>
+        <div class="relationship_count">
+          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+        </div>
+        <div class="relationship">
+          <%= render "relationships/button", user: @user %>
+        </div>
         <div>
           DMボタン
+        </div>
+      <% else %>
+        <div class="relationship_count">
+          <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
+        </div>
+        <div>
+          <%= link_to "edit", edit_user_path(current_user.id) %>
+        </div>
+        <div>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
         </div>
       <% end %>
     </div>
