--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,18 @@
           <%= render "relationships/button", user: @user %>
         </div>
         <div>
-          DMボタン
+          <% unless @user.id == current_user.id %>    <!--現在ログインしているユーザーではない場合-->
+            <% if @isroom == true %>    <!--既にルームが作成されていれば-->
+              <%= link_to "ダイレクトメッセージ", room_path %>    <!--そのチャットルームに遷移するボタンを表示-->
+            <% else %>  <!--ルームがなければ-->
+              <%= form_with model: @room, local: true do |f| %>    <!--roomsテーブルに情報を送信-->
+                <%= fields_for @entry do |r| %>    <!--entriesテーブルに情報を送信-->
+                  <%= r.hidden_field :user_id, value: @user.id %>  <!--entriesテーブルにuser_idを含める-->
+                <% end %>
+                <%= f.submit "チャットを始める" %>
+              <% end %>
+            <% end %>
+          <% end %>
         </div>
       <% else %>
         <div class="relationship_count">
