--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -14,7 +14,7 @@
           <%= m.created_at.strftime("%Y-%m-%d %H:%M")%>
         <% end %>
       <% else %>
-        <%#= @entries.user.name %>さんにメッセージを送ってみよう！
+        メッセージを送ってみよう！
       <% end %>
     </div>
     <div>
