--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,9 @@
         <%= attachment_image_tag @user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
         <%= @user.name %>
       </div>
+      <div>
+        <%= @user.introduction %>
+      </div>
       <% if current_user != @user %>
         <div class="relationship_count">
           <%= render "relationships/count",user: @user, following_users: @following_users, follower_users: @follower_users %>
@@ -13,18 +16,7 @@
           <%= render "relationships/button", user: @user %>
         </div>
         <div>
-          <% unless @user.id == current_user.id %>    <!--現在ログインしているユーザーではない場合-->
-            <% if @isroom == true %>    <!--既にルームが作成されていれば-->
-              <%= link_to "ダイレクトメッセージ", room_path %>    <!--そのチャットルームに遷移するボタンを表示-->
-            <% else %>  <!--ルームがなければ-->
-              <%= form_with model: @room, local: true do |f| %>    <!--roomsテーブルに情報を送信-->
-                <%= fields_for @entry do |r| %>    <!--entriesテーブルに情報を送信-->
-                  <%= r.hidden_field :user_id, value: @user.id %>  <!--entriesテーブルにuser_idを含める-->
-                <% end %>
-                <%= f.submit "チャットを始める" %>
-              <% end %>
-            <% end %>
-          <% end %>
+          <%= render "message_button", user: @user, isroom: @isroom, room: @room, entry: @entry, roomid: @roomid %>
         </div>
       <% else %>
         <div class="relationship_count">
