--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,16 @@
           <li>
             <%= link_to "新規登録", new_post_path %>
           </li>
-          <li>通知</li>
+          <li>
+            <%= link_to notifications_path do %>
+              <% if unchecked_notifications.any? %>
+                <i class="far fa-thumbs-up"></i>
+                <i class="fas fa-circle"></i>
+              <% else %>
+                <i class="far fa-thumbs-up"></i>
+              <% end %>
+            <% end %>
+          </li>
           <li>
             <%= link_to user_path(current_user) do %>
               <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
