--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,6 +85,9 @@
           </li>
         </ul>
       <%end%>
+      <div>
+        <%= render 'searches/form' %>
+      </div>
     </header>
     <main>
       <!--フラッシュメッセージの部分をdivタグで囲む-->
