--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,6 +43,9 @@
       <div class="like_btn_<%= @post.id %>">
         <%= render "likes/like", post: @post %>
       </div>
+      <!--<i class="fas fa-eye">-->
+      <!--  <%#= @post.impressionist_count(:filter=>:ip_address) %>-->
+      <!--</i>-->
       <div>
         <%= @post.body %>
       </div>
