--- a/app/views/posts/good_ranking.html.erb
+++ b/app/views/posts/good_ranking.html.erb
@@ -1,24 +1,4 @@
 <h2>グッド!!が多い投稿</h2>
 <div>
-  <% @posts_like_ranking.each do |post| %>
-    <div>
-      <%= link_to user_path(post.user.id) do %>
-        <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-        <%= post.user.name %>
-      <% end %>
-      <div>
-        <%= post.title %>
-      </div>
-    </div>
-    <div class="mypage">
-      <% post.post_images.first(1).each do |image| %>
-        <%= link_to post_path(post.id) do %>
-          <%= attachment_image_tag image, :image %>
-        <% end %>
-      <% end %>
-  　</div>
-  　<div>
-  　  <%= post.likes.count %>
-  　</div>
-  <% end %>
+  <%= render "good_ranking", posts_good_ranking: @posts_good_ranking %>
 </div>
