--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= @rooms.each do |room| %>
+  <% @rooms.each do |room| %>
     <div>
       <%= link_to room_path(room) do %>
         <h4>
