--- a/app/views/searches/_posts_index.html.erb
+++ b/app/views/searches/_posts_index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class= "col-lg-12">
-      <%= posts.each do |post| %>
+      <% posts.each do |post| %>
         <div>
           <%= link_to user_path(post.user) do %>
             <%= attachment_image_tag post.user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
