--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,13 @@ header > :first-child {
   height: auto;
 }
 
-#preview img{
+#preview img {
   width: 25%;
   height: auto;
+}
+
+
+.slick-prev:before, .slick-next:before {
+  color: #000;/*黒にする*/
+  opacity: .40;/*デフォルトは.75が指定されている*/
 }
