--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <%= link_to user_path(@user.id) do %>
-        <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+      <% if user_signed_in? %>
+        <%= link_to user_path(@user.id) do %>
+          <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+        <% end %>
+        <%= @user.name %>
       <% end %>
-      <%= @user.name %>
     </div>
     <div class="col-lg-9">
       <% @posts.each do |post| %>
@@ -34,6 +36,10 @@
         </div>
         <div>
           <%= link_to "コメント#{post.comments.count}件",post_path(post.id) %>
+        </div>
+        <div>
+          <i class="far fa-clock clock-icon"></i>
+          <%= time_ago_in_words(post.created_at) %>前
         </div>
       <% end %>
     </div>
