--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,27 +16,21 @@
 
 @import "bootstrap";
 
-header {
-  display: flex;
-  justify-content: flex-end;
-}
-header > :first-child {
-  margin-right: auto;
+.site-name {
+  font-family: 'The Nautigal', sans-serif;
+  color: #FF9900;
 }
 
-.nav {
-  list-style: none;
-  display: flex;
-  align-items: center;
+.nav-link {
+  color: #FF9900;
 }
 
-.nav li {
-  margin-right: 10px;
+.navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,153,0,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-.nav li a {
-  color: orange;
-  text-decoration: none;
+.navbar-toggler{
+  border-color: #FF9900;
 }
 
 .mypage img {
