--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,8 +16,22 @@
 
 @import "bootstrap";
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.sticky-top {
+  position: relative;
+}
+
+.search {
+  position: absolute;
+}
 .site-name {
   font-family: 'The Nautigal', sans-serif;
+  margin: 0 10px;
   color: #FF9900;
 }
 
@@ -31,6 +45,31 @@
 
 .navbar-toggler{
   border-color: #FF9900;
+}
+
+@media screen and (max-width: 420px){
+.br-sp {display: none; }
+}
+
+body {
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
+.text-box {
+  margin: 70px;
+}
+.top-text {
+  color: #FFFFFF;
+}
+
+.about-slick {
+  width: 250px;
 }
 
 .mypage img {
