--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,15 +1,18 @@
 <div class="container">
-  <div class="row">
-    <h4>
-      Campageでは、キャンプ好きや興味のある方の交流の場を目指しています。<br>
-      キャンプレイアウトやグランピング体験をシェアすることで、これから始めたい方の参考となり後押しをします。<br>
-      グランピング施設を探している人やキャンプを始めたい人が簡単に情報収集できる。<br>
-      それが Campage
-    </h4>
+  <div class="row d-flex justify-content-center text-center">
+    <div class="text-box">
+      <h4 class="top-text">
+        Campageでは、キャンプ好きや興味のある方の交流の場を目指しています。<br>
+        キャンプレイアウトやグランピング体験をシェアすることで、<br>
+        これから始めたい方の参考となり後押しをします。<br>
+        グランピング施設を探している人やキャンプを始めたい人が簡単に情報収集できる。<br>
+        それが Campage
+      </h4>
+    </div>
   </div>
-  <div class="row">
+  <div class="row d-flex justify-content-center">
     <% @random.each do |post| %>
-      <div class="about-slick" style="width: 300px;">
+      <div class="about-slick m-1">
         <% post.post_images.each do |image| %>
           <%= link_to post_path(image.post.id) do %>
             <%= attachment_image_tag image, :image, style: "width: 100%" %>
