--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,32 +32,63 @@
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <% if user_signed_in? %>
-            <ul class="navbar-nav">
-              <li class="nav-item"><%= link_to "POSTSLIST", posts_path, class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "RANKING", posts_ranking_path, class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "CONTACT", new_contacts_path, class: "nav-link" %></li>
-              <li class="nav-item">
-                <%= link_to new_post_path, class: "nav-link" do %>
-                  <i class="fas fa-campground"></i>
-                  <i class="fas fa-plus"></i>
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to notifications_path, class: "nav-link" do %>
-                  <% if unchecked_notifications.any? %>  <!--未確認の通知があるかどうか確認-->
-                    <i class="far fa-thumbs-up"></i>
-                    <i class="fas fa-circle"></i>
-                  <% else %>
-                    <i class="far fa-thumbs-up"></i>
+            <!--topとaboutの場合-->
+            <% if current_page?(root_path) || current_page?(about_path) %>
+              <ul class="navbar-nav">
+                <li class="nav-item"><%=link_to "ABOUT", about_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= link_to "POSTSLIST", posts_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= link_to "RANKING", posts_ranking_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= link_to "CONTACT", new_contacts_path, class: "nav-link" %></li>
+                <li class="nav-item">
+                  <%= link_to new_post_path, class: "nav-link" do %>
+                    <i class="fas fa-campground"></i>
+                    <i class="fas fa-plus"></i>
                   <% end %>
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to user_path(current_user), class: "nav-link" do %>
-                  <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
-                <% end %>
-              </li>
-            </ul>
+                </li>
+                <li class="nav-item">
+                  <%= link_to notifications_path, class: "nav-link" do %>
+                    <% if unchecked_notifications.any? %>  <!--未確認の通知があるかどうか確認-->
+                      <i class="far fa-thumbs-up"></i>
+                      <i class="fas fa-circle"></i>
+                    <% else %>
+                      <i class="far fa-thumbs-up"></i>
+                    <% end %>
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to user_path(current_user), class: "nav-link" do %>
+                    <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+                  <% end %>
+                </li>
+              </ul>
+            <% else %>
+              <ul class="navbar-nav">
+                <li class="nav-item"><%= link_to "POSTSLIST", posts_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= link_to "RANKING", posts_ranking_path, class: "nav-link" %></li>
+                <li class="nav-item"><%= link_to "CONTACT", new_contacts_path, class: "nav-link" %></li>
+                <li class="nav-item">
+                  <%= link_to new_post_path, class: "nav-link" do %>
+                    <i class="fas fa-campground"></i>
+                    <i class="fas fa-plus"></i>
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to notifications_path, class: "nav-link" do %>
+                    <% if unchecked_notifications.any? %>  <!--未確認の通知があるかどうか確認-->
+                      <i class="far fa-thumbs-up"></i>
+                      <i class="fas fa-circle"></i>
+                    <% else %>
+                      <i class="far fa-thumbs-up"></i>
+                    <% end %>
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to user_path(current_user), class: "nav-link" do %>
+                    <%= attachment_image_tag current_user, :profile_image, size: '50x50', fallback: "no_image.jpg" %>
+                  <% end %>
+                </li>
+              </ul>
+            <% end %>
             <!--ログインしていなくて、トップページ、新規登録ページ、ログインページの場合の処理-->
           <% elsif current_page?(root_path) || current_page?(new_user_session_path) || current_page?(new_user_registration_path) %>
             <ul class="navbar-nav">
@@ -69,8 +100,7 @@
           <% else %>
             <ul class="navbar-nav">
               <li class="nav-item"><%=link_to "ABOUT", about_path, class: "nav-link" %></li>
-              <li class="nav-item"><%= link_to "POSTSLIST", posts_path, class: "nav-link" %>
-              </li>
+              <li class="nav-item"><%= link_to "POSTSLIST", posts_path, class: "nav-link" %></li>
               <li class="nav-item"><%= link_to "RANKING", posts_ranking_path, class: "nav-link" %></li>
               <li class="nav-item"><%= link_to "CONTACT", new_contacts_path, class: "nav-link" %></li>
               <li class="nav-item"><%= link_to "SIGNUP", new_user_registration_path, class: "nav-link" %></li>
@@ -79,16 +109,22 @@
           <%end%>
         </div>
       </nav>
-      <div>
-        <%= render 'searches/form' %>
+      <% unless current_page?(root_path) || current_page?(about_path) %>
+        <div class="d-flex justify-content-end">
+          <%= render 'searches/form' %>
+        </div>
+      <% end %>
+      <div class="flash_message">
+        <%= render 'layouts/flash' %>
       </div>
     </header>
     <main>
       <!--フラッシュメッセージの部分をdivタグで囲む-->
-      <div class="flash_message">
-        <%= render 'layouts/flash' %>
-      </div>
+
     <%= yield %>
     </main>
+    <footer class="row d-flex align-items-end justify-content-center">
+      <p>atode</p>
+    </footer>
   </body>
 </html>
